--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /JabbaWard/build/
-project.properties
-project.xml
+JabbaWardpnbproject/private/project.properties
+JabbaWardpnbproject/private/project.xml
