se ignoran tuplas.txt

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ JabbaWard/nbproject/private/private.properties
 JabbaWard/nbproject/private/private.xml
 JabbaWard/nbproject/private/private.xml
 JabbaWard/nbproject/private/private.properties
+JabbaWard/tuplas.txt
